--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <div class ="container"> 
     <div class="box"> <h2 class="title"> TO DO LIST <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRn4x5TzJL6gqLh0CY-lA9LHXM76DXNpBU9aB5_DS7THZ9OV4911w"></h2></div>
     
-  <div class="box"><input id="input" placeholder="What needs to be done?"><ul id="list"></ul></div>
+  <div class="box"><input id="input" placeholder="What needs to be done? 🍓"><ul id="list"></ul></div>
   
 
   </body>
