--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TO DO LIST 🍓</title>
-    <link rel="shortcut icon" href="file:///nfs/2018/a/aliwang/Desktop/277340488032211.png"/>
+    <link rel="shortcut icon" href="https://imgur.com/kOjHpoj"/>
     
     <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
      <link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
